# teapot

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  .rgignore  BUILD.bazel  MODULE.bazel  Makefile  README  gazelle_python.yaml  go.mod  go.sum  pyproject.toml  requirements.txt  requirements.txt.raw  shell.nix
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-merge.yaml  lint.yaml  verify-generated.yml
bazel/: BUILD.bazel  status.sh
cmd/: pyproject.toml
cmd/alertd/: BUILD.bazel  alertd.go
cmd/authd/: BUILD.bazel  authd.go
cmd/bottind/: BUILD.bazel  Dockerfile  Makefile  bottind.go
cmd/calendard/: BUILD.bazel  calendard.go
cmd/ccmd/: BUILD.bazel  Dockerfile  Makefile  ccmd.go
cmd/checkblocklistd/: checkblocklistd.go
cmd/desecd/: BUILD.bazel  desecd.go
cmd/embedd/: BUILD.bazel  __init__.py  main.py  pyproject.toml  server.py
cmd/filesd/: BUILD.bazel  filesd.go
cmd/kontakted/: BUILD.bazel  Dockerfile  Makefile  kontakte  kontakted.go
cmd/loadbalancerd/: BUILD.bazel  Dockerfile  Makefile  loadbalancerd.go
cmd/logd/: BUILD.bazel  logd.go
cmd/netd/: BUILD.bazel  Dockerfile  Makefile  netd.go
image/: README
image/iptables/: BUILD.bazel  apko.lock.json  apko.yaml
lib/broker/: BUILD.bazel  broker.go
lib/cmd/: BUILD.bazel  cmd.go
lib/httpauth/: BUILD.bazel  basic.go  httpauth.go  jwt.go  jwt_flag.go  metrics.go
lib/httphandler/: BUILD.bazel  errors.go  flag.go  handlers.go  httphandler.go  internal.go  redirect.go
lib/httplog/: BUILD.bazel  flag.go  handler.go  httplog.go
lib/httpsrv/: BUILD.bazel  flag.go  httpsrv.go  metrics.go  z.go
lib/httptrace/: BUILD.bazel  httptrace.go
lib/kubeclient/: BUILD.bazel  flag.go  kubeclient.go
lib/kubecontroller/: BUILD.bazel  kubecontroller.go
lib/kubelog/: BUILD.bazel  kubelog.go
lib/kubeutil/: BUILD.bazel  annotate.go  taint.go
lib/ldap/: BUILD.bazel  client.go  config.go  factory.go  find.go  flag.go  metrics.go  passwd.go  tracing.go  user.go  util.go  z.go
lib/ldapserver/: BUILD.bazel  client.go  constants.go  context.go  flag.go  message.go  packet.go  responsemessage.go  route.go  server.go
lib/ldapsrv/: BUILD.bazel  client.go  constants.go  context.go  error.go  flag.go  handler.go  ldapsrv.go  log.go  message.go  metrics.go  packet.go  responsemessage.go  route.go  server.go  z.go
lib/log/: BUILD.bazel  flag.go  log.go  retryablehttp_compat.go
lib/observability/: BUILD.bazel  flag.go  observability.go  pprof.go  prometheus.go  tracing.go  z.go
lib/pagetitle/: BUILD.bazel  pagetitle.go
lib/pgcache/: BUILD.bazel  key.go  metrics.go  notification_manager.go  sorted_map.go  table.go  types.go
lib/run/: BUILD.bazel  combine.go  run.go
lib/s3cache/: BUILD.bazel  flag.go  hash.go  metadata.go  s3cache.go  util.go
proto/: BUILD.bazel  Makefile  embed.proto  pyproject.toml
proto/embed/: embed.pb.go  embed_vtproto.pb.go
proto/proto/: embed.py  embed_pb2.py  embed_pb2.pyi  embed_pb2_grpc.py
service/: pyproject.toml
service/alert/: BUILD.bazel  alert.go  flag.go  github.go  metrics.go  rate_limit_backoff.go  z.go
service/alert/alertmanager/: BUILD.bazel  alertmanager.go  flag.go  metrics.go  webhook.go
service/auth/: BUILD.bazel  auth.go  flag.go  oidc.go  paths.go  redirect.go  skeleton.go
service/bottin/: BUILD.bazel  acl.go  auth.go  bottin.go  flag.go  hash.go  log.go  memberof.go  metrics.go  read.go  util.go  write.go  z.go
service/bottin/store/: BUILD.bazel  flag.go  mem.go  metrics.go  psql.go  schema.sql  store.go  types.go
service/bottin/store/migrations/: 00001_entries.sql
service/calendar/: BUILD.bazel  calendar.go  flags.go  metrics.go  z.go
service/calendar/backend/: BUILD.bazel  backend.go  etag.go  filtering.go  user_principal.go
service/calendar/store/: BUILD.bazel  flag.go  mem.go  metrics.go  online.go  online_calendar.go  online_object.go  psql.go  psql_calendar.go  psql_object.go  store.go  types.go
service/calendar/store/migrations/: 00001_calendars.sql  00002_object_refs.sql  00002_objects.sql
service/ccm/: BUILD.bazel  ccm.go  flag.go
service/ccm/externalip/: BUILD.bazel  externalip.go  flag.go
service/ccm/initialize/: BUILD.bazel  initialize.go  internalip.go
service/ccm/internalip/: BUILD.bazel  flag.go  internalip.go
service/checkblocklist/: blocklists.go  checkblocklist.go  controller.go  flag.go  metrics.go  z.go
service/desec/: BUILD.bazel  conversion.go  desec.go  flag.go  metrics.go  mock.go  provider.go  webhook.go  z.go
service/embed/: BUILD.bazel  __init__.py  pyproject.toml
service/files/: BUILD.bazel  files.go  flag.go  metrics.go  mount.go  readonly.go  session.go  session_flag.go  z.go
service/files/s3/: fs.go  metadata.go  schema.sql  store.go
service/files/web/: BUILD.bazel  flag.go  page_browse.go  page_browse_dialog.go  page_file.go  page_index.go  paths.go  skeleton.go  web.go
service/files/webdav/: BUILD.bazel  fs.go  webdav.go
service/kontakte/: BUILD.bazel  auth.go  flag.go  index.go  kontakte.go  log.go  login.go  oauth2.go  page.go  page_index.go  page_passwd.go  page_user.go  page_users.go  passwd.go  paths.go  server.go  skeleton.go  status.go  style.css  style.go  user.go  users.go
service/kontakte/components/: BUILD.bazel  button.go  field.go  input.go
service/loadbalancer/: BUILD.bazel  controller.go  flag.go  loadbalancer.go  reconciler.go  service_reconciler.go
service/loadbalancer/arp/: BUILD.bazel  arp.go  flag.go  listener.go  speaker.go
service/log/: BUILD.bazel  buffer.go  flag.go  handler.go  log.go  manager.go  metrics.go  ticker.go  worker.go  z.go
service/net/: BUILD.bazel  cluster.go  controller.go  flag.go  ip.go  jool.go  local.go  local_flag.go  net.go  util.go  wireguard.go  wireguard_flag.go
service/net/bgp/: bgp.go  bgp_flag.go
service/net/cni/: BUILD.bazel  cni.go  cni_flag.go  flag.go  util.go
service/net/ddns/: ddns.go  flag.go
service/net/internal/: BUILD.bazel  util.go
service/net/router/: BUILD.bazel  flag.go  router.go
service/net/wireguard/: BUILD.bazel  flag.go  util.go  wireguard.go  wireguard_flag.go
(+205 files in other folders)
