# MODULE.bazel
# Defines the Bazel module and its dependencies.

module(
    name = "teapot",
    version = "0.0.1",
)

# --- Core Dependencies ---
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5") # bump dependency of gazelle
bazel_dep(name = "rules_foreign_cc", version = "0.15.1") # bump dependency of rules_proto_grpc_python

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.3")

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")

bazel_dep(name = "rules_oci", version = "2.2.7")

# --- Go Configuration ---
# Sets up the Go SDK and dependencies from go.mod
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_ammario_tlru", "com_github_cenkalti_backoff_v5", "com_github_coreos_go_iptables", "com_github_dustin_go_humanize", "com_github_go_ldap_ldap_v3", "com_github_golang_jwt_jwt_v5", "com_github_google_btree", "com_github_google_go_github_v81", "com_github_google_gopacket", "com_github_google_uuid", "com_github_hack_pad_hackpadfs", "com_github_jsimonetti_pwscheme", "com_github_kataras_requestid", "com_github_lib_pq", "com_github_lmittmann_tint", "com_github_planetscale_vtprotobuf", "com_github_prometheus_alertmanager", "com_github_prometheus_client_golang", "com_github_rs_cors", "com_github_spf13_pflag", "com_github_sqids_sqids_go", "com_github_vishvananda_netlink", "com_zx2c4_golang_wireguard_wgctrl", "dev_maragu_gomponents", "dev_maragu_gomponents_htmx", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_klog_v2", "org_golang_google_grpc", "org_golang_google_protobuf", "org_golang_x_net")

# --- Python Configuration ---
# Sets up the Python toolchain and dependencies from requirements.txt
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
