[project]
name = "cmd"
dynamic = ["version"]
requires-python = ">=3.13"
authors = [
  {name = "Luca Tagliavini", email = "luca@teapot.ovh"},
  {name="Samuele Musiani", email="samu@teapot.ovh"}
]
dependencies = [
  "service",
  "proto",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
search_parent_directories = true 
[tool.hatch.build.targets.wheel]
packages = ["embedd"]

[project.scripts]
embedd = "embedd:embedd"

[tool.uv.sources]
service = { workspace = true }
proto = { workspace = true }
