[project]
name = "proto"
dynamic = ["version"]
description = "Proto files for the teapot project"
requires-python = ">=3.13"
authors = [
  {name = "Luca Tagliavini", email = "luca@teapot.ovh"},
]
dependencies = [
  "grpcio",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
search_parent_directories = true 
[tool.hatch.build.targets.wheel]
packages = ["proto"]
