load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "alertd_lib",
    srcs = ["alertd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/alertd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/alert",
        "//service/alert/alertmanager",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "alertd",
    embed = [":alertd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "alertd_static",
    embed = [":alertd_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

# OCI Image building
image_layer(
    name = "binary_layer",
    srcs = {
        "/alertd": ":alertd_static",
    },
    compress = "zstd",
)

image_manifest(
    name = "image",
    base = "@distroless_static_debian13",
    entrypoint = ["/alertd"],
    layers = [
        ":binary_layer",
    ],
)

image_load(
    name = "load",
    image = ":image",
    tag = "ghcr.io/teapotovh/alertd:latest",
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/alertd",
    stamp = "disabled",
    tag_file = "//bazel:version_file_latest",
)

image_push(
    name = "push_ttl",
    image = ":image",
    registry = "ttl.sh",
    repository = "teapotovh_alertd",
    tag = "1h",
)
