load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bottind_lib",
    srcs = ["bottind.go"],
    importpath = "github.com/teapotovh/teapot/cmd/bottind",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/ldapserver",
        "//lib/log",
        "//service/bottin",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "bottind",
    embed = [":bottind_lib"],
    visibility = ["//visibility:public"],
)
