load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ccmd_lib",
    srcs = ["ccmd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/ccmd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/kubelog",
        "//lib/log",
        "//lib/run",
        "//service/ccm",
        "//service/ccm/externalip",
        "//service/ccm/initialize",
        "//service/ccm/internalip",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "ccmd",
    embed = [":ccmd_lib"],
    visibility = ["//visibility:public"],
)
