load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "desecd_lib",
    srcs = ["desecd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/desecd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/desec",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "desecd",
    embed = [":desecd_lib"],
    visibility = ["//visibility:public"],
)
