load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "desecd_lib",
    srcs = ["desecd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/desecd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/desec",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "desecd",
    embed = [":desecd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "desecd_static",
    embed = [":desecd_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

# OCI Image building
image_layer(
    name = "binary_layer",
    srcs = {
        "/desecd": ":desecd_static",
    },
    compress = "zstd",
)

image_manifest(
    name = "image",
    base = "@distroless_static_debian13",
    entrypoint = ["/desecd"],
    layers = [
        ":binary_layer",
    ],
)

image_load(
    name = "load",
    image = ":image",
    tag = "ghcr.io/teapotovh/desecd:latest",
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/desecd",
    tag = "latest",
)

image_push(
    name = "push_ttl",
    image = ":image",
    registry = "ttl.sh",
    repository = "teapotovh_desecd",
    tag = "1h",
)
