load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "filesd_lib",
    srcs = ["filesd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/filesd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/files",
        "//service/files/web",
        "//service/files/webdav",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "filesd",
    embed = [":filesd_lib"],
    visibility = ["//visibility:public"],
)
