load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "filesd_lib",
    srcs = ["filesd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/filesd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/files",
        "//service/files/web",
        "//service/files/webdav",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "filesd",
    embed = [":filesd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "filesd_static",
    embed = [":filesd_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

# OCI Image building
image_layer(
    name = "binary_layer",
    srcs = {
        "/filesd": ":filesd_static",
    },
    compress = "zstd",
)

image_manifest(
    name = "image",
    base = "@distroless_static_debian13",
    entrypoint = ["/filesd"],
    layers = [
        ":binary_layer",
    ],
)

image_load(
    name = "load",
    image = ":image",
    tag = "ghcr.io/teapotovh/filesd:latest",
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/filesd",
    stamp = "disabled",
    tag_file = "//bazel:version_file",
)

image_push(
    name = "push_ttl",
    image = ":image",
    registry = "ttl.sh",
    repository = "teapotovh_filesd",
    tag = "1h",
)
