load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kontakted_lib",
    srcs = ["kontakted.go"],
    importpath = "github.com/teapotovh/teapot/cmd/kontakted",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/ldap",
        "//lib/log",
        "//service/kontakte",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "kontakted",
    embed = [":kontakted_lib"],
    visibility = ["//visibility:public"],
)
