load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "kontakted_lib",
    srcs = ["kontakted.go"],
    importpath = "github.com/teapotovh/teapot/cmd/kontakted",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/kontakte",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "kontakted",
    embed = [":kontakted_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "kontakted_static",
    embed = [":kontakted_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

# OCI Image building
image_layer(
    name = "binary_layer",
    srcs = {
        "/kontakted": ":kontakted_static",
    },
    compress = "zstd",
)

image_manifest(
    name = "image",
    base = "@distroless_static_debian13",
    entrypoint = ["/kontakted"],
    layers = [
        ":binary_layer",
    ],
)

image_load(
    name = "load",
    image = ":image",
    tag = "ghcr.io/teapotovh/kontakted:latest",
)

image_push(
    name = "push_latest",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/kontakted",
    tag = "latest",
    stamp = "disabled",
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/kontakted",
    tag_file = "//bazel:version_file",
    stamp = "disabled",
)

image_push(
    name = "push_ttl",
    image = ":image",
    registry = "ttl.sh",
    repository = "teapotovh_kontakted",
    tag = "1h",
)
