load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "loadbalancerd_lib",
    srcs = ["loadbalancerd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/loadbalancerd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/kubelog",
        "//lib/log",
        "//lib/run",
        "//service/loadbalancer",
        "//service/loadbalancer/arp",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "loadbalancerd",
    embed = [":loadbalancerd_lib"],
    visibility = ["//visibility:public"],
)
