load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "logd_lib",
    srcs = ["logd.go"],
    importpath = "github.com/teapotovh/teapot/cmd/logd",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/httpsrv",
        "//lib/log",
        "//lib/observability",
        "//lib/run",
        "//service/log",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "logd",
    embed = [":logd_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "logd_static",
    embed = [":logd_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

# OCI Image building
image_layer(
    name = "binary_layer",
    srcs = {
        "/logd": ":logd_static",
    },
    compress = "zstd",
)

image_manifest(
    name = "image",
    base = "@distroless_static_debian13",
    entrypoint = ["/logd"],
    layers = [
        ":binary_layer",
    ],
)

image_load(
    name = "load",
    image = ":image",
    tag = "ghcr.io/teapotovh/logd:latest",
)

image_push(
    name = "push_latest",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/logd",
    tag = "latest",
)

image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "teapotovh/logd",
    stamp = "disabled",
    tag_file = "//bazel:version_file_latest",
)

image_push(
    name = "push_ttl",
    image = ":image",
    registry = "ttl.sh",
    repository = "teapotovh_logd",
    tag = "1h",
)
