load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "kubeutil",
    srcs = [
        "annotate.go",
        "taint.go",
    ],
    importpath = "github.com/teapotovh/teapot/lib/kubeutil",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//util/retry",
    ],
)
